--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.3.2
   hive_flutter: ^1.1.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
